--- a/src/data/projects.yml
+++ b/src/data/projects.yml
@@ -1,106 +1,4 @@
 categories:
-  - title: Publishing and sharing
-    url: //github.com/Esri
-    text: Explore more publishing and sharing projects
-    projects:
-      - title: The Smithsonian
-        description: The Smithsonian maintains vast archives of cultural heritage.  They use Story Maps to provide the rich history and spatial context of our world.
-        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //github.com/Esri/storymap-crowdsource
-        language: JavaScript
-        text: Learn more
-      - title: Compare Maps
-        description: Web app for comparing different maps.
-        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //github.com/Esri/Compare-Maps-Template
-        language: JavaScript
-        text: Learn more
-      - title: Historic Map Explorer
-        description: Web app to explore digitized map overlays.
-        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //github.com/Esri/map-collection-explorer
-        language: JavaScript
-        text: Learn more
-      - title: Open Data
-        description: Web components for integrating data into civic sites.
-        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //github.com/esridc/opendata-search-component
-        language: JavaScript
-        text: Learn more
-      - title: Cedar
-        description: Charts for ArcGIS GeoServices
-        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //http://esri.github.io/cedar/
-        language: JavaScript
-        text: Learn more
-  - title: Data management
-    url: //github.com/Esri
-    text: Explore more data management projects
-    projects:
-      - title: U.S. Census Bureau
-        description: The U.S. Census measures and shares national statistic data about every single household in the United States. To make the information accessible to application developers they developed CitySDK which uses the Terraformer library to convert between Esri JSON and GeoJSON.
-        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //terraformer.io
-        language: JavaScript
-        text: Learn more about Terraformer
-      - title: Koop
-        description: Node server to integrate custom Web APIs with ArcGIS.
-        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //http://koopjs.github.io/
-        language: JavaScript
-        text: Learn more about Koop
-      - title: Geometry Engine
-        description: Fundamental spatial data types and analyses
-        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //github.com/Esri/geometry-api-java/wiki
-        language: Java
-        text: Learn more about the Geometry Engine
-      - title: Terraformer
-        description: Library to convert common spatial data formats.
-        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //terraformer.io
-        language: JavaScript
-        text: Learn more about Terraformer
-      - title: OSM Editor
-        description: Desktop toolbox for accessing and editing OpenStreetMap.
-        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //github.com/Esri/arcgis-osm-editor
-        language: C#
-        text: Learn more about StoryMaps
-  - title: Analysis
-    url: //github.com/Esri
-    text: Explore more analysis projects
-    projects:
-      - title: Gibbs Seed Company
-        description: Gibbs Seed Company constantly monitors current agricultural conditions and appropriate seed hybrids for farmers to plant throughout their fields. Using Spark-Geo and PySAL they can analyze over 300 million planting options in under 10 minutes.
-        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //github.com/Esri/storymap-crowdsource
-        language: JavaScript
-        text: Learn more about StoryMaps
-      - title: GIS Tools for Hadoop
-        description: Integrate ArcGIS with Hadoop big data processing.
-        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //github.com/Esri/storymap-crowdsource
-        language: Java
-        text: Learn more
-      - title: R Analysis
-        description: Develop and share R statistical analysis with ArcGIS.
-        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //github.com/Esri/storymap-crowdsource
-        language: R
-        text: Learn more
-      - title: PySAL
-        description: Python library for spatial analysis.
-        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //github.com/Esri/storymap-crowdsource
-        language: Python
-        text: Learn more
-      - title: Spark-Geo
-        description: Extension to Apache Spark engine for spatial processing
-        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //github.com/Esri/storymap-crowdsource
-        language: Scala
-        text: Learn more
   - title: Web development
     url: //github.com/Esri
     text: Explore more web projects
@@ -116,10 +14,141 @@ categories:
         image: //developers.arcgis.com/assets/img/homepage/promo-python.png
         url: //esri.github.io/esri-leaflet/
         language: JavaScript
+        stars: 691
         text: Learn more
       - title: Calcite Web
         description: A Responsive HTML, CSS, and JS Framework.
         image: //developers.arcgis.com/assets/img/homepage/promo-python.png
         url: //esri.github.io/calcite-web/
         language: CSS
+        stars: 39
+        text: Learn more
+      - title: Cedar
+        description: Charts for ArcGIS GeoServices
+        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
+        url: //esri.github.io/cedar/
+        language: JavaScript
+        stars: 148
+        text: Learn more
+      - title: LERC
+        description: rapid encoding and decoding for any pixel type (not just RGB or Byte)
+        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
+        url: //github.com/Esri/lerc
+        language: C++
+        stars: 36
+        text: Learn more
+  - title: Data management
+    url: //github.com/Esri
+    text: Explore more data management projects
+    projects:
+      - title: U.S. Census Bureau
+        description: The U.S. Census measures and shares national statistic data about every single household in the United States. To make the information accessible to application developers they developed CitySDK which uses the Terraformer library to convert between Esri JSON and GeoJSON.
+        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
+        url: //terraformer.io
+        language: JavaScript
+        text: Learn more about Terraformer
+      - title: Koop
+        description: Node server to integrate custom Web APIs with ArcGIS.
+        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
+        url: //koopjs.github.io/
+        language: JavaScript
+        stars: 314
+        text: Learn more about Koop
+      - title: Geometry Engine
+        description: Fundamental spatial data types and analyses
+        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
+        url: //github.com/Esri/geometry-api-java/wiki
+        language: Java
+        stars: 242
+        text: Learn more
+      - title: Terraformer
+        description: Library to convert common spatial data formats.
+        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
+        url: //terraformer.io
+        language: JavaScript
+        stars: 378
+        text: Learn more about Terraformer
+      - title: OSM Editor
+        description: Desktop toolbox for accessing and editing OpenStreetMap.
+        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
+        url: //github.com/Esri/arcgis-osm-editor
+        language: C#
+        stars: 123
+        text: Learn more about StoryMaps
+  - title: Analysis
+    url: //github.com/Esri
+    text: Explore more analysis projects
+    projects:
+      - title: Gibbs Seed Company
+        description: Gibbs Seed Company constantly monitors current agricultural conditions and appropriate seed hybrids for farmers to plant throughout their fields. Using Spark-Geo and PySAL they can analyze over 300 million planting options in under 10 minutes.
+        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
+        url: //github.com/Esri/storymap-crowdsource
+        language: JavaScript
+        stars: 7
+        text: Learn more about StoryMaps
+      - title: GIS Tools for Hadoop
+        description: Integrate ArcGIS with Hadoop big data processing.
+        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
+        url: //github.com/Esri/gis-tools-for-hadoop
+        language: Java
+        stars: 289
+        text: Learn more
+      - title: R Analysis
+        description: Develop and share R statistical analysis with ArcGIS.
+        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
+        url: //r-arcgis.github.io/
+        language: R
+        stars: 47
+        text: Learn more
+      - title: PySAL
+        description: Python library for spatial analysis.
+        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
+        url: //github.com/Esri/PySAL-ArcGIS-Toolbox
+        language: Python
+        stars: 7
+        text: Learn more
+      - title: Spark Point in Polygon
+        description: Spark job to perform massive Point in Polygon (PiP) operations on a distributed share-nothing cluster.
+        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
+        url: //github.com/mraad/spark-pip
+        language: Scala
+        stars: 15
+        text: Learn more
+  - title: Publishing and sharing
+    url: //github.com/Esri
+    text: Explore more publishing and sharing projects
+    projects:
+      - title: The Smithsonian
+        description: The Smithsonian maintains vast archives of cultural heritage.  They use Story Maps to provide the rich history and spatial context of our world.
+        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
+        url: //github.com/Esri/storymap-crowdsource
+        language: JavaScript
+        text: Learn more
+      - title: Compare Maps
+        description: Web app for comparing different maps.
+        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
+        url: //github.com/Esri/Compare-Maps-Template
+        language: JavaScript
+        stars: 3
+        text: Learn more
+      - title: Historic Map Explorer
+        description: Web app to explore digitized map overlays.
+        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
+        url: //github.com/Esri/map-collection-explorer
+        language: JavaScript
+        stars: 5
+        text: Learn more
+      - title: Open Data
+        description: Web components for integrating data into civic sites.
+        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
+        url: //github.com/esridc/opendata-search-component
+        language: JavaScript
+        stars: 3
+        text: Learn more
+      - title: Styler
+        description: A configurable application for creating, styling and sharing modern 2D and 3D map apps
+        image: //developers.arcgis.com/assets/img/homepage/promo-python.png
+        url: //github.com/Esri/calcite-maps-styler-template
+        language: JavaScript
+        stars: 11
         text: Learn more
