--- a/src/data/projects.yml
+++ b/src/data/projects.yml
@@ -1,8 +1,8 @@
 categories:
-  - title: Web development
-    url: //github.com/search?q=topic%3Aweb-development+org%3AEsri+fork%3Atrue
-    text: Explore more web projects
-    anchor: webdevelopment
+  - title: Web Development
+    url: //github.com/search?q=topic%3Aweb-development+org%3AEsri
+    text: More web development projects
+    anchor: web-development
     color: blue
     projects:
       - title: City of Raleigh, North Carolina
@@ -39,10 +39,10 @@ categories:
         displayLang: C++
         searchLang: c%2B%2B
         stars: 36
-  - title: Data management
-    url: //github.com/search?q=topic%3Adata-management+org%3AEsri+fork%3Atrue
-    text: Explore more data management projects
-    anchor: datamanagement
+  - title: Data Management
+    url: //github.com/search?q=topic%3Adata-management+user%3AEsri+user%3Akoopjs
+    text: More data management projects
+    anchor: data-management
     color: orange
     projects:
       - title: U.S. Census Bureau
@@ -80,9 +80,9 @@ categories:
         searchLang: c%23
         stars: 123
   - title: Spatial Analysis
-    url: //github.com/search?q=topic%3Aanalysis+org%3AEsri+fork%3Atrue
-    text: Explore more analysis projects
-    anchor: spatialanalysis
+    url: //github.com/search?q=topic%3Aspatial-analysis+user%3AEsri+user%3Amraad+user%3Ar-arcgis
+    text: More spatial analysis projects
+    anchor: spatial-analysis
     color: green
     projects:
       - title: Gibbs Seed Company
@@ -120,10 +120,10 @@ categories:
         displayLang: Scala
         searchLang: scala
         stars: 15
-  - title: Publishing and sharing
-    url: //github.com/search?q=topic%3Apublishing-sharing+org%3AEsri+fork%3Atrue
-    text: Explore more publishing and sharing projects
-    anchor: publishingsharing
+  - title: Publishing and Sharing
+    url: //github.com/search?q=topic%3Apublishing-sharing+org%3AEsri+org%3Aesridc
+    text: More publishing and sharing projects
+    anchor: publishing-sharing
     color: purple
     projects:
       - title: The Smithsonian
