--- a/package.json
+++ b/package.json
@@ -6,110 +6,111 @@
   "license": "Apache-2.0",
   "main": "js/index.js",
   "dependencies": {
-      "@angular/common": "2.4.1",
-      "@angular/compiler": "2.4.1",
-      "@angular/core": "2.4.1",
-      "@angular/forms": "2.4.1",
-      "@angular/http": "2.4.1",
-      "@angular/platform-browser": "2.4.1",
-      "@angular/platform-browser-dynamic": "2.4.1",
-      "@angular/router": "3.4.1",
-      "babel-polyfill": "6.13.0",
-      "custom-event-polyfill": "0.3.0",
-      "document-register-element": "1.2.0",
-      "rxjs": "5.0.1",
-      "url-parse": "1.1.3",
-      "whatwg-fetch": "1.0.0",
-      "xml2js": "^0.4.17",
-      "zone.js": "0.7.2"
+    "@angular/common": "2.4.1",
+    "@angular/compiler": "2.4.1",
+    "@angular/core": "2.4.1",
+    "@angular/forms": "2.4.1",
+    "@angular/http": "2.4.1",
+    "@angular/platform-browser": "2.4.1",
+    "@angular/platform-browser-dynamic": "2.4.1",
+    "@angular/router": "3.4.1",
+    "babel-polyfill": "6.13.0",
+    "custom-event-polyfill": "0.3.0",
+    "document-register-element": "1.2.0",
+    "rxjs": "5.0.1",
+    "url-parse": "1.1.3",
+    "whatwg-fetch": "1.0.0",
+    "xml2js": "^0.4.17",
+    "zone.js": "0.7.2"
   },
   "devDependencies": {
-      "@angular/compiler-cli": "2.4.1",
-      "@angular/tsc-wrapped": "^0.5.0",
-      "@ngtools/webpack": "^1.2.1",
-      "@types/core-js": "^0.9.34",
-      "@types/jasmine": "^2.2.34",
-      "@types/node": "^6.0.41",
-      "acetate": "^1.3.3",
-      "angular": "1.2.30",
-      "angular-cookies": "1.2.30",
-      "angular-highlightjs": "^0.6.1",
-      "angular-loader": "1.5.8",
-      "angular-loading-bar": "0.9.0",
-      "angular-mocks": "1.5.8",
-      "angular-resource": "1.5.8",
-      "angular-route": "1.2.30",
-      "angular-router-loader": "^0.4.0",
-      "angular-sanitize": "1.2.30",
-      "angular-touch": "1.5.8",
-      "angular-ui-router": "0.2.10",
-      "angular2-template-loader": "^0.6.0",
-      "async": "^1.5.2",
-      "ava": "^0.16.0",
-      "awesome-typescript-loader": "^2.2.4",
-      "babel": "^6.3.26",
-      "babel-cli": "^6.4.5",
-      "babel-core": "^6.10.4",
-      "babel-loader": "^6.2.4",
-      "babel-plugin-transform-runtime": "^6.9.0",
-      "babel-polyfill": "^6.13.0",
-      "babel-preset-es2015": "^6.9.0",
-      "calcite-web": "git+https://git@github.com/Esri/calcite-web.git#v1.0.0-rc.1",
-      "connect-modrewrite": "^0.9.0",
-      "core-js": "^2.4.1",
-      "dotenv": "^2.0.0",
-      "enhanced-resolve": "^3.0.2",
-      "eslint": "^3.6.0",
-      "eslint-config-semistandard": "^7.0.0",
-      "eslint-config-standard": "^6.0.1",
-      "eslint-plugin-promise": "^3.3.0",
-      "eslint-plugin-standard": "^2.0.1",
-      "grunt": "^1.0.1",
-      "grunt-acetate": "^1.1.2",
-      "grunt-concurrent": "^2.0.0",
-      "grunt-contrib-clean": "~1.0.0",
-      "grunt-contrib-concat": "1.0.1",
-      "grunt-contrib-copy": "1.0.0",
-      "grunt-contrib-imagemin": "1.0.1",
-      "grunt-contrib-uglify": "2.0.0",
-      "grunt-contrib-watch": "1.0.0",
-      "grunt-newer": "1.2.0",
-      "grunt-protractor-runner": "3.2.0",
-      "grunt-protractor-webdriver": "~0.2.0",
-      "grunt-sass": "1.2.1",
-      "grunt-webpack": "2.0.0-beta.5",
-      "husky": "0.11.8",
-      "jasmine-core": "^2.4.1",
-      "js-yaml": "3.6.1",
-      "json-loader": "^0.5.4",
-      "karma": "^1.2.0",
-      "karma-chrome-launcher": "^2.0.0",
-      "karma-jasmine": "^1.0.2",
-      "karma-jasmine-diff-reporter": "^0.6.3",
-      "karma-phantomjs-launcher": "^1.0.2",
-      "karma-sourcemap-loader": "^0.3.7",
-      "karma-webpack": "^1.8.0",
-      "lodash": "4.16.2",
-      "markdown-it-toc": "git+https://git@github.com/kneemer/markdown-it-toc",
-      "matchdep": "1.0.1",
-      "node-sass": "3.10.0",
-      "nunjucks": "^2.5.2",
-      "nunjucks-date-filter": "0.1.1",
-      "phantomjs-prebuilt": "2.1.12",
-      "progress-bar-webpack-plugin": "^1.9.1",
-      "raw-loader": "0.5.1",
-      "reflect-metadata": "^0.1.3",
-      "request": "2.75.0",
-      "rimraf": "2.5.4",
-      "sass-loader": "^4.1.1",
-      "shelljs": "^0.7.5",
-      "time-grunt": "1.4.0",
-      "typescript": "2.0.10",
-      "unzip": "^0.1.11",
-      "webpack": "2.1.0-beta.28",
-      "webpack-dev-server": "2.1.0-beta.12",
-      "webpack-merge": "^2.0.0",
-      "x-ray": "^2.3.1"
+    "@angular/compiler-cli": "2.4.1",
+    "@angular/tsc-wrapped": "^0.5.0",
+    "@ngtools/webpack": "^1.2.1",
+    "@types/core-js": "^0.9.34",
+    "@types/jasmine": "^2.2.34",
+    "@types/node": "^6.0.41",
+    "acetate": "^1.3.3",
+    "angular": "1.2.30",
+    "angular-cookies": "1.2.30",
+    "angular-highlightjs": "^0.6.1",
+    "angular-loader": "1.5.8",
+    "angular-loading-bar": "0.9.0",
+    "angular-mocks": "1.5.8",
+    "angular-resource": "1.5.8",
+    "angular-route": "1.2.30",
+    "angular-router-loader": "^0.4.0",
+    "angular-sanitize": "1.2.30",
+    "angular-touch": "1.5.8",
+    "angular-ui-router": "0.2.10",
+    "angular2-template-loader": "^0.6.0",
+    "async": "^1.5.2",
+    "ava": "^0.16.0",
+    "awesome-typescript-loader": "^2.2.4",
+    "babel": "^6.3.26",
+    "babel-cli": "^6.4.5",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.9.0",
+    "calcite-web": "git+https://git@github.com/Esri/calcite-web.git#v1.0.0-rc.1",
+    "connect-modrewrite": "^0.9.0",
+    "core-js": "^2.4.1",
+    "dotenv": "^2.0.0",
+    "enhanced-resolve": "^3.0.2",
+    "eslint": "^3.6.0",
+    "eslint-config-semistandard": "^7.0.0",
+    "eslint-config-standard": "^6.0.1",
+    "eslint-plugin-promise": "^3.3.0",
+    "eslint-plugin-standard": "^2.0.1",
+    "grunt": "^1.0.1",
+    "grunt-acetate": "^1.1.2",
+    "grunt-concurrent": "^2.0.0",
+    "grunt-contrib-clean": "~1.0.0",
+    "grunt-contrib-concat": "1.0.1",
+    "grunt-contrib-copy": "1.0.0",
+    "grunt-contrib-imagemin": "1.0.1",
+    "grunt-contrib-uglify": "2.0.0",
+    "grunt-contrib-watch": "1.0.0",
+    "grunt-gh-pages": "^2.0.0",
+    "grunt-newer": "1.2.0",
+    "grunt-protractor-runner": "3.2.0",
+    "grunt-protractor-webdriver": "~0.2.0",
+    "grunt-sass": "1.2.1",
+    "grunt-webpack": "2.0.0-beta.5",
+    "husky": "0.11.8",
+    "jasmine-core": "^2.4.1",
+    "js-yaml": "3.6.1",
+    "json-loader": "^0.5.4",
+    "karma": "^1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-jasmine-diff-reporter": "^0.6.3",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
+    "lodash": "4.16.2",
+    "markdown-it-toc": "git+https://git@github.com/kneemer/markdown-it-toc",
+    "matchdep": "1.0.1",
+    "node-sass": "3.10.0",
+    "nunjucks": "^2.5.2",
+    "nunjucks-date-filter": "0.1.1",
+    "phantomjs-prebuilt": "2.1.12",
+    "progress-bar-webpack-plugin": "^1.9.1",
+    "raw-loader": "0.5.1",
+    "reflect-metadata": "^0.1.3",
+    "request": "2.75.0",
+    "rimraf": "2.5.4",
+    "sass-loader": "^4.1.1",
+    "shelljs": "^0.7.5",
+    "time-grunt": "1.4.0",
+    "typescript": "2.0.10",
+    "unzip": "^0.1.11",
+    "webpack": "2.1.0-beta.28",
+    "webpack-dev-server": "2.1.0-beta.12",
+    "webpack-merge": "^2.0.0",
+    "x-ray": "^2.3.1"
   },
   "scripts": {
     "test": "JOB_ENV=test karma start && ava test/build-validation",
@@ -130,7 +131,6 @@
   "bugs": {
     "url": "https://github.com/jf990/esri.github.com/issues"
   },
-  "contributors": [
-  ],
+  "contributors": [],
   "homepage": "https://github.com/jf990/esri.github.com#readme"
 }
